temp-k8s/db.yaml
  apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: task-pv-volume 
    labels:
      type: local
  spec:
    storageClassName: manual
    capacity:
      storage: 5Gi
    accessModes:
      - ReadWriteOnce 
    persistentVolumeReclaimPolicy: Retain
    hostPath:
      path: "/mnt/data" 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: db
    app: ecommerce
  name: db
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      service: db
      app: ecommerce
  strategy: {}
  template:
    metadata:
      labels:
        service: db
        app: ecommerce
    spec:
      containers:
      - image: postgres:11-alpine
        name: postgres
        securityContext:
          privileged: true 
        ports:
          - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresdb 
      serviceAccountName: postgres
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
            claimName: task-pvc-volume
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ecommerce
    service: db 
  name: db
  namespace: ecommerce  
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: ecommerce
    service: db
status:
  loadBalancer: {}
