temp-k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tags.datadoghq.com/service: storefront
    app: ecommerce
    tags.datadoghq.com/env: "development"
  name: frontend
  namespace: ecommerce  
spec:
  replicas: 1
  selector:
    matchLabels:
      tags.datadoghq.com/service: storefront
      tags.datadoghq.com/env: "development"
      app: ecommerce
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        tags.datadoghq.com/service: storefront
        tags.datadoghq.com/env: "development"
        app: ecommerce
    spec:
      containers:
      - args:
        - docker-entrypoint.sh
        command:
        - sh
        image: 241825837502.dkr.ecr.ap-northeast-2.amazonaws.com/frontend-new:latest@sha256:e6405005c9e926a53e77db829f148c0be8d3009dc998625ca30cbed23fc29377
        imagePullPolicy: Always
        name: ecommerce-spree-observability
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits: 
            cpu: 500m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    tags.datadoghq.com/service: storefront
    tags.datadoghq.com/env: development
    app: ecommerce
  name: frontend
  namespace: ecommerce  
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      nodePort: 30050
      name: http
  selector:
    tags.datadoghq.com/service: storefront
    tags.datadoghq.com/env: development
    app: ecommerce
  # Change this value to LoadBalancer for better public ingress routing to this
  # pod on most k8s platforms.
  type: LoadBalancer
